# autowds-backend

./: .cnb.yml  .cursorrules  .env  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  Justfile  README.md  compose.yaml  test.http
.github/workflows/: docker-publish.yml
admin/: README.md  index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  index.css
admin/src/api/: auth.ts  marketing.ts  statistics.ts  task.ts  template.ts  user.ts
admin/src/components/Layout/: index.tsx
admin/src/pages/Dashboard/: index.tsx
admin/src/pages/Login/: index.css  index.tsx
admin/src/pages/Marketing/: CampaignDetail.tsx  CampaignList.tsx  LeadList.tsx  index.tsx
admin/src/pages/Task/: TaskList.tsx
admin/src/pages/Template/: TemplateList.tsx
admin/src/pages/User/: UserList.tsx
admin/src/store/: auth.ts
admin/src/utils/: request.ts
cloud/: .env.development  .env.production  package-lock.json  package.json
cloud/public/: index.html  manifest.json  server.blend
cloud/src/: App.css  App.tsx  Navigator.tsx  index.tsx  setupProxy.js
cloud/src/api/: data.ts  dataClean.ts  instance.ts  pay.ts  statistics.ts  task.ts  template.ts  user.ts
cloud/src/components/account/: Login.tsx  Register.tsx  ResetPasswd.tsx  ValidateCodeInput.tsx  index.css  validateRule.ts
cloud/src/components/cron/: Cron.css  Cron.tsx
cloud/src/components/cron/Common/: InputFromInterval.tsx  InputFromTo.tsx  InputSpecified.tsx
cloud/src/components/cron/Pane/: DayPane.tsx  HourPane.tsx  MinutePane.tsx  MonthPane.tsx  SecondPane.tsx  YearPane.tsx
cloud/src/components/cron/WeekPane/: InputFromTo.tsx  InputLast.tsx  InputSpecified.tsx  InputTarget.tsx  WeekSelect.tsx  index.tsx
cloud/src/components/modal/: index.css  select-db.tsx  select-export.tsx
cloud/src/components/select/: DebounceSelect.tsx  options.ts
cloud/src/i18n/: index.ts
cloud/src/locales/: en.json  zh.json
cloud/src/page/: Alert.tsx  Api.tsx  Data.tsx  Home.tsx  Pay.tsx  Proxy.tsx  Task.tsx
cloud/src/page/dashboard/: InstanceStats.tsx  TaskStats.tsx  UsageStats.tsx  countUp.tsx
cloud/src/page/data/: CleanPipeline.tsx  DB.tsx  DataDetail.tsx  NewDataStore.tsx  Store.tsx
cloud/src/page/detail/: DataQuality.tsx  InstanceRecords.tsx  ScheduleSettings.tsx  TaskDetail.tsx  TaskInstance.tsx
cloud/src/page/detail/instance/: Data.tsx  Log.tsx
cloud/src/page/detail/settings/: CronSelector.tsx  FieldMapping.tsx  ProxySelector.tsx  StoreSelector.tsx
cloud/src/page/store/: StoreFields.tsx
cloud/src/page/task/: CommonTemplate.tsx  MyFavorite.tsx  MyTask.tsx  MyTaskList.css  TemplateItem.css  TemplateItem.tsx  TemplateList.css  TemplateList.tsx
cloud/src/types/: DB.ts  ExporterType.ts  NodeTypes.ts  Page.ts  Table.ts  Task.ts  Template.ts
cloud/src/utils/: AjaxInterceptor.tsx  ajax.ts  format.ts  string.ts
config/: app-prod.toml  app.toml
docs/: PAYMENT.md  PAY_API.md
sql/: ddl.sql  pay_order.sql
src/: main.rs  s3_task_log.rs  task.rs
src/app/: mod.rs  template.rs  token.rs  user.rs
src/config/: apalis.rs  mail.rs  mod.rs  pay.rs  s3.rs  tencent_ses.rs
src/dto/: mod.rs  task.rs  template.rs
src/http/: auth_middleware.rs  error_handler.rs  extractor.rs  mod.rs  problemdetails.rs  real_ip_parser.rs  task.rs  template.rs  token.rs  user.rs
src/middleware/: auth_middleware.rs  error_handler.rs  mod.rs
src/model/: account_user.rs  credit_log.rs  data_store_mate.rs  data_store_meta.rs  enums.rs  favorite.rs  marketing_attribution.rs  marketing_campaign.rs  marketing_delivery.rs  marketing_event.rs  marketing_lead.rs  mod.rs  page.rs  pay_order.rs  route_database.rs  schedule_config.rs  scraper_task.rs  task_instance.rs  task_template.rs  template.rs  user.rs
src/model/_entities/: account_user.rs  credit_log.rs  favorite.rs  marketing_attribution.rs  marketing_campaign.rs  marketing_delivery.rs  marketing_event.rs  marketing_lead.rs  mod.rs  pay_order.rs  prelude.rs  scraper_task.rs  sea_orm_active_enums.rs  task_instance.rs  task_template.rs
src/plugin/: mod.rs  s3.rs  task_log_s3.rs
src/router/: admin.rs  data_clean.rs  error_messages.rs  mod.rs  pay.rs  pay_query.rs  statistics.rs  store.rs  task.rs  template.rs  token.rs  user.rs
src/router/admin/: marketing.rs
src/service/: credit.rs  data_clean.rs  mod.rs  pay.rs  task_log.rs  tencent_ses.rs  user.rs
src/task/: pay_check.rs
src/task_instance_logs_sse/: archive.rs  channel.rs  mod.rs  redis_live.rs
src/task_log/: mod.rs  s3.rs
src/task_log/sse/: archive.rs  channel.rs  mod.rs  redis_live.rs
src/utils/: auth.rs  credit.rs  jwt.rs  mail.rs  mod.rs  pay_plugin.rs  pay_service.rs  problemdetails.rs  rand.rs  sqlx_pg_pool_plugin.rs  user_service.rs  validate_code.rs
src/utils/keys/: private.key  public.key
src/views/: admin.rs  data_clean.rs  marketing.rs  mod.rs  pay.rs  statistics.rs  store.rs  task.rs  task_instance_capture.rs  template.rs  token.rs  user.rs
templates/: confirm-result.html
templates/mail/: validate_code.html
templates/pay/: create.html  redirect.html
