[package]
name = "autowds-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autowds-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
spring = "0.4"
spring-web = { version = "0.4", features = ["openapi", "openapi-scalar"] }
spring-mail = "0.4"
spring-redis = "0.4"
spring-job = { version = "0.4", features = ["postgres_storage"] }
spring-apalis = { version = "0.4", features = ["redis"] }
spring-sea-orm = { version = "0.4", features = [
    "postgres",
    "with-web",
    "with-web-openapi",
] }
sea-orm = { version = "1.0", features = ["with-ipnetwork"] }
serde = "1.0"
serde_json = "1.0"
serde_with = "3.14"
strum = { version = "0.27", features = ["derive"] }
schemars = { version = "1.1", features = ["derive", "chrono04"] }
anyhow = "1.0"
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-client-ip = "1.1"
axum-valid = "0.24.0"
problemdetails = { version = "0.6", features = ["axum"] }
validator = { version = "0.20", features = ["derive"] }
jsonwebtoken = "9.3"
pem = "3.0"
lazy_static = "1.4"
tracing = "0.1"
rand = "0.9"
askama = "0.12"
itertools = "0.14"
apalis-board-api = { version = "1.0.0-beta.1", features = ["axum"] }
apalis-core = { version = "1.0.0-beta.2" }
