[package]
name = "autowds-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autowds-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
summer = "0.5.1"
summer-web = { version = "0.5.0", features = ["openapi", "openapi-scalar"] }
summer-mail = "0.5.0"
summer-redis = "0.5.0"
summer-job = { version = "0.5.1" }
summer-apalis = { version = "0.5.0-rc.0", features = ["redis", "board", "board-web"] }
summer-sea-orm = { version = "0.5.0-rc.0", features = [
    "postgres",
    "with-web",
    "with-web-openapi",
] }
summer-sqlx = { version = "0.5.0", default-features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "with-chrono",
    "with-json",
] }
sea-orm = { version = "2.0.0-rc", features = ["with-ipnetwork"] }
serde = "1.0"
serde_json = "1.0"
serde_with = "3.14"
strum = { version = "0.27", features = ["derive"] }
schemars = { version = "1.1", features = ["derive", "chrono04"] }
anyhow = "1.0"
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-client-ip = "1.1"
axum-valid = { version = "0.24.0", features = ["aide"] }
problemdetails = { version = "0.6", features = ["axum"] }
validator = { version = "0.20", features = ["derive"] }
jsonwebtoken = "9.3"
pem = "3.0"
lazy_static = "1.4"
tracing = "0.1"
rand = "0.9"
askama = "0.12"
itertools = "0.14"

# 支付相关依赖
alipay_sdk_rust = "1"
wechat-pay-rust-sdk = { version = "0.2", features = ["async"] }
derive_more = { version = "1.0", features = ["deref"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures-util = "0.3"
serde_urlencoded = "0.7"
urlencoding = "2.1"
reqwest = { version = "0.13.3", features = ["json"] }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
subtle = "2.6.1"

# 与 autowds-instance 一致：按 task_instance.log_key 读取归档 NDJSON
aws-config = { version = "1.8", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "rustls",
] }
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
] }

[patch.crates-io]
axum-valid = { git = "https://github.com/holmofy/axum-valid", branch = "patch-1" }
